--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 /* ヘッダーとフッターにさわやかブルー系 */
 header, footer {
-  background-color: #4da6ff;  /* ← 爽やかブルー */
+  background-color: #3492f0;  /* ← 爽やかブルー */
   color: white;
   padding: 1em 0;
 }
