--- a/style.css
+++ b/style.css
@@ -8,6 +8,16 @@ body {
   line-height: 1.6;
 }
 
+/* 中央の白い箱＋左右枠線 
+    トップ用に細いもの*/
+.narrowContainer {
+  background-color: #fff; /* ← 白背景！ */
+  max-width: 800px;
+  margin: 2em auto;
+  padding: 1.5em;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
+}
+
 /* 中央の白い箱＋左右枠線 */
 .container {
   background-color: #fff; /* ← 白背景！ */
