--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ h1, h2 {
 .image-container iframe,
 .image-container img {
   max-width: 600px;    /* 横幅の最大値を制限 */
+  //height: auto;
   flex-shrink: 0;
   display: block;
 }
