--- a/style.css
+++ b/style.css
@@ -151,3 +151,23 @@ h1, h2 {
   padding: 0 4px;
   border-radius: 3px;
 }
+
+
+/* UE変数の色 */
+/* スポイトで取得済み */
+
+.color-float  { color: #37D100; } 
+.color-bool   { color: #920101; } 
+.color-string { color: #FD00D2; }
+.color-object { color: #00A5EE; } 
+
+/* スポイトで未取得 */
+.color-int    { color: #60ee44; } 
+.color-text   { color: #9b59b6; }
+.color-name   { color: #34495e; } 
+.color-array  { color: #f1c40f; } 
+.color-struct { color: #16a085; } 
+.color-enum   { color: #95a5a6; } 
+/* 使用例
+  Set the value of <span class="color-int">Count</span> to <span class="color-int">10</span>. 
+*/
