--- a/style.css
+++ b/style.css
@@ -78,6 +78,11 @@ h1, h2 {
 .product-info h3 {
   margin: 0;
   font-size: 1.2em;
+  margin-top: -0.5em; /* 上部の隙間をなくす */
+}
+
+.product-info p {
+  margin: 0; /* 上部のマージンをなくす */
 }
 
 .product-links {
@@ -105,6 +110,7 @@ h1, h2 {
   align-items: flex-start; /* or center */
   gap: 20px;
   margin-top: 1em;
+  margin-bottom: 1.5em;
 }
 
 .image-container iframe{
@@ -126,6 +132,33 @@ h1, h2 {
 
 .paragraph {
   margin-top: 1em; /* 上に余白 */
+}
+
+
+/* 画像や動画の右にテキストを表示するための小さいコンテナ */
+.image-container-small {
+  display: flex;
+  align-items: flex-start; /* or center */
+  gap: 20px;
+  margin-top: 1em;
+  margin-bottom: 1.5em;
+}
+
+.image-container-small iframe{
+  max-width: 300px;    /* 横幅の最大値を制限 */
+  flex-shrink: 0;
+  display: block;
+}
+
+.image-container-small img {  
+  max-width: 300px;    /* 横幅の最大値を制限 */
+  height: auto;
+  flex-shrink: 0;
+  display: block;
+}
+
+.image-container-small .text {
+  flex: 1;
 }
 
 #toc {
