--- a/style.css
+++ b/style.css
@@ -1,12 +1,24 @@
 /* 全体の背景色（枠の外側） */
 body {
-  font-family: sans-serif;
+  font-family: sans-serif;  
+  font-size: 16px; /* 例: PCでの基準フォントサイズ */
   background-color: #ebf3fc; /* 枠の外側＋ヘッダー/フッターと同じ色 */
   color: #333;
   margin: 0;
   padding: 0;
   line-height: 1.6;
 }
+@media (max-width: 767px) {
+    body {
+        font-size: 8px;
+    }
+    h1 {
+        font-size: 1.5em;
+    }
+    h2 {
+        font-size: 1em; 
+    }
+  }
 
 /* 中央の白い箱＋左右枠線 
     トップ用に細いもの*/
@@ -28,7 +40,7 @@ body {
 }
 
 .site-title{  
-    font-size: 48px;
+    font-size: 3em;
     font-weight: bold;
     color: #000000; /* 元の文字色 */
 }
@@ -51,8 +63,13 @@ a:hover {
   text-decoration: underline;
 }
 
-h1, h2 {
+h1 {
   margin-top: 0;
+  font-size: 2em;
+}
+h2 {
+  margin-top: 0;
+  font-size: 1.5em;
 }
 
 .product {
