--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ header, footer {
   background-color: #ebf3fc;
   color: #003366;
   text-align: center; /* ← これで中央揃え */
+  padding: 30px;
 }
 
 /* リンク */
