--- a/style.css
+++ b/style.css
@@ -45,19 +45,7 @@ body {
   display: none;
 }
 
-h1 {
-  font-family: 'M PLUS Rounded 1c', sans-serif;
-  font-size: 1.75em;
-  font-weight: bold;
-  padding-bottom: 5px;
-  margin-top: 30px;
-  margin-bottom: 15px;
-  background-image: linear-gradient(45deg, #005a96, #000000); /* 派手なグラデーション */
-  -webkit-background-clip: text; /* 文字をクリッピングマスクとして使用 */
-  -webkit-text-fill-color: transparent; /* 文字色を透明にする */
-}
-
-h2, h3, h4 {
+h1,h2, h3, h4 {
   font-family: 'M PLUS Rounded 1c', sans-serif;
   font-size: 1.75em;
   font-weight: bold;
