--- a/style.css
+++ b/style.css
@@ -30,22 +30,36 @@ body {
 }
 
 .site-title{  
+  font-family: 'M PLUS Rounded 1c', sans-serif;
   font-size: 3em;
   font-weight: bold;
   padding-bottom: 5px;
   margin-top: 30px;
   margin-bottom: 15px;
-  background-image: linear-gradient(45deg, #005a96, #000000); /* 派手なグラデーション */
+  background-image: linear-gradient(45deg, rgb(0, 138, 230), #000000); /* 派手なグラデーション */
   -webkit-background-clip: text; /* 文字をクリッピングマスクとして使用 */
   -webkit-text-fill-color: transparent; /* 文字色を透明にする */
-  text-align: center; /* ← これで中央揃え */
+  text-align: center; /* 中央寄せ */
 }
 
+
+h1{  
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+  font-size: 3em;
+  font-weight: bold;
+  padding-bottom: 5px;
+  margin-top: 30px;
+  margin-bottom: 15px;
+  background-image: linear-gradient(45deg, rgb(0, 138, 230), #000000); /* 派手なグラデーション */
+  -webkit-background-clip: text; /* 文字をクリッピングマスクとして使用 */
+  -webkit-text-fill-color: transparent; /* 文字色を透明にする */
+  text-align: center; /* 中央寄せ */
+}
 .home header {
   display: none;
 }
 
-h1,h2, h3, h4 {
+h2, h3, h4 {
   font-family: 'M PLUS Rounded 1c', sans-serif;
   font-size: 1.75em;
   font-weight: bold;
@@ -72,13 +86,6 @@ a {
 
 a:hover {
   text-decoration: underline;
-}
-
-h1 {
-  margin-top: 0;
-}
-h2 {
-  margin-top: 0;
 }
 
 .product {
