--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   font-family: sans-serif;  
   font-size: 16px; /* 例: PCでの基準フォントサイズ */
-  background-color: #476998;
+  background-image: linear-gradient(to right, #74ABF6, #456693, #1E2D41);
   margin: 0;
   padding: 0;
   word-wrap: break-word;   /* 長い単語を途中で改行させる (IEなど古いブラウザ向け) */
@@ -65,7 +65,7 @@ h2, h3, h4 {
 
 /* ヘッダーとフッター：bodyと同じ背景色で統一感を出す */
 header, footer {
-  background-color: #476998;
+  background-image: linear-gradient(to right, #74ABF6, #456693, #1E2D41);
   text-align: center; /* ← これで中央揃え */
   color: white;
 }
