--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   font-family: sans-serif;  
   font-size: 16px; /* 例: PCでの基準フォントサイズ */
-  background-color: #476998;
+  background-color: #476997;
   margin: 0;
   padding: 0;
   word-wrap: break-word;   /* 長い単語を途中で改行させる (IEなど古いブラウザ向け) */
@@ -29,16 +29,16 @@ body {
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.05); /* 影を薄くする */
 }
 
-.site-title{  
+.site-title {
   font-family: 'M PLUS Rounded 1c', sans-serif;
   font-size: 3em;
   font-weight: bold;
-  padding-bottom: 5px;
-  margin-top: 30px;
-  margin-bottom: 15px;
-  text-align: center; /* 中央寄せ */  
   color: white;
+  display: flex; /* 修正 */
+  align-items: center; /* 追加 */
+  justify-content: center; /* 追加 */
 }
+
 
 .home header {
   display: none;
@@ -65,7 +65,7 @@ h2, h3, h4 {
 
 /* ヘッダーとフッター：bodyと同じ背景色で統一感を出す */
 header, footer {
-  background-color: #476998;
+  background-color: #476997;
   text-align: center; /* ← これで中央揃え */
   color: white;
 }
