--- a/style.css
+++ b/style.css
@@ -3,17 +3,43 @@ body {
   font-family: sans-serif;  
   font-size: 16px; /* 例: PCでの基準フォントサイズ */
   background-color: #476997;
+  /* 青系のグラデーションを適用 */
+  background-image: linear-gradient(to right, #476997, #476997, #2C4260);
+  
   margin: 0;
   padding: 0;
   word-wrap: break-word;   /* 長い単語を途中で改行させる (IEなど古いブラウザ向け) */
   overflow-wrap: break-word; /* 長い単語を途中で改行させる (推奨される新しいプロパティ) */
 }
 
-/* ヘッダーとフッター：bodyと同じ背景色で統一感を出す */
-header, footer {
-  background-color: #476997;
-  text-align: center; /* ← これで中央揃え */
+/*header内で使用。トップだけヘッダーは非表示*/
+.site-title {
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+  font-size: 3em;
+  font-weight: bold;
   color: white;
+  display: flex; /* 修正 */
+  align-items: center; /* 追加 */
+  justify-content: center; /* 追加 */
+  
+  background-image: linear-gradient(to right, #476997, #476997, #2C4260);
+
+  /* 上下の余白をマイナスにして、ぴったりとくっつける */
+  margin-top: 0px;
+  height: 100px;
+}
+.home header {
+  display: none;
+}
+
+footer {  
+  background-image: linear-gradient(to right, #476997, #476997, #2C4260);
+  text-align: center; /* ← これで中央揃え */
+  height: 50px;;
+  display: flex; /* Flexboxコンテナに指定 */
+  justify-content: center; /* 水平方向の中央揃え */
+  align-items: center; /* 垂直方向の中央揃え */
+  color:white;
 }
 
 /* 中央の白い箱＋左右枠線 
@@ -35,20 +61,8 @@ header, footer {
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.05); /* 影を薄くする */
 }
 
-.site-title {
-  font-family: 'M PLUS Rounded 1c', sans-serif;
-  font-size: 3em;
-  font-weight: bold;
-  color: white;
-  display: flex; /* 修正 */
-  align-items: center; /* 追加 */
-  justify-content: center; /* 追加 */
-}
 
 
-.home header {
-  display: none;
-}
 
 h1{  
   font-family: 'M PLUS Rounded 1c', sans-serif;
