--- a/style.css
+++ b/style.css
@@ -2,9 +2,8 @@
 body {
   font-family: sans-serif;  
   font-size: 16px; /* 例: PCでの基準フォントサイズ */
-  background-color: #476997;
   /* 青系のグラデーションを適用 */
-  background-image: linear-gradient(to right, #476997, #476997, #2C4260);
+  background-image: linear-gradient(to right, #476997, #15202e);
   
   margin: 0;
   padding: 0;
@@ -27,7 +26,7 @@ header{
   display: flex; /* 修正 */
   align-items: center; /* 追加 */
   justify-content: center; /* 追加 */
-  background-image: linear-gradient(to right, #476997, #476997, #2C4260);
+  background-image: linear-gradient(to right, #476997, #15202e);
   height: 120px;
 }
 .home header {
@@ -49,7 +48,7 @@ h1{
 }
 
 footer {  
-  background-image: linear-gradient(to right, #476997, #476997, #2C4260);
+  background-image: linear-gradient(to right, #476997, #15202e);
   text-align: center; /* ← これで中央揃え */
   height: 50px;;
   display: flex; /* Flexboxコンテナに指定 */
