.color-float      { color: #63ce00; }

--- a/style.css
+++ b/style.css
@@ -331,7 +331,7 @@ a:hover {
 .color-Byte       { color: #016E64; } 
 .color-int        { color: #23DEAA; } 
 .color-int64      { color: #AAE2AD; } 
-.color-float      { color: #9DFC44; } 
+.color-float      { color: #63ce00; } 
 .color-name       { color: #C980FA; } 
 .color-string     { color: #FD00D1; }
 .color-text       { color: #E479A6; }
